# Web-management-by-actix

./: .env  .gitignore  Cargo.toml  diesel.toml  readme.md
migrations/2024-07-14-084357_create_posts/: up.sql
migrations/2024-07-29-084704_create_posts/: up.sql
migrations/2024-08-10-130327_create_posts/: up.sql
src/: errors.rs  lib.rs  routers.rs  schema.rs  send_email.rs  token.rs  utils.rs
src/db_operations/: mod.rs  order_sql.rs  product_sql.rs  user_sql.rs
src/handlers/: file_service.rs  mod.rs  order.rs  pay.rs  products.rs  user.rs
src/middlewares/: API_timing_middleware.rs  mod.rs
src/models/: mod.rs  order_model.rs  product_model.rs  profile_model.rs  user_model.rs
src/tests/: user.rs
