[package]
name = "management"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web="4.8.0"
actix-rt="2.7.0"
# 提供对异步编程的支持和工具
futures-util = "0.3.30"
serde = {version = "1.0.203",features=["derive"]}
dotenv="0.15.0"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
serde_json = "1.0.64"
diesel = { version = "2.2.1", features = ["mysql","r2d2","chrono"] }
r2d2="0.8.10"
chrono = { version = "0.4.38", features = ["serde"] }
actix-session = { version = "0.9.0" , features = ["redis-rs-session"] }
jsonwebtoken = "9.3.0"
actix-identity = "0.7.1"
reqwest ={ version = "0.12.5",features = ["json"]}
tokio = {version="1.38.1", features=["full"]}
